DROP TABLE Courier CASCADE CONSTRAINTS;
DROP TABLE Client CASCADE CONSTRAINTS;
DROP TABLE ParkingSlotScootersUsage CASCADE CONSTRAINTS;
DROP TABLE ParkingSlotsScooters CASCADE CONSTRAINTS;
DROP TABLE Scooter CASCADE CONSTRAINTS;
DROP TABLE Address CASCADE CONSTRAINTS;
DROP TABLE CreditCard CASCADE CONSTRAINTS;
DROP TABLE ClientOrder CASCADE CONSTRAINTS;
DROP TABLE Product CASCADE CONSTRAINTS;
DROP TABLE PostalCode CASCADE CONSTRAINTS;
DROP TABLE CourierScooter CASCADE CONSTRAINTS;
DROP TABLE Invoice CASCADE CONSTRAINTS;
DROP TABLE OrderLine CASCADE CONSTRAINTS;
DROP TABLE State_of_use_type CASCADE CONSTRAINTS;
DROP TABLE Product_type CASCADE CONSTRAINTS;
DROP TABLE DeliveryRun CASCADE CONSTRAINTS;
DROP TABLE Pharmacy CASCADE CONSTRAINTS;
DROP TABLE PlatformUser CASCADE CONSTRAINTS;
DROP TABLE Administrator CASCADE CONSTRAINTS;
DROP TABLE UserType CASCADE CONSTRAINTS;
DROP TABLE InvoiceLine CASCADE CONSTRAINTS;
DROP TABLE Stock CASCADE CONSTRAINTS;
DROP TABLE StockLine CASCADE CONSTRAINTS;
DROP TABLE ParkingSlot CASCADE CONSTRAINTS;
DROP TABLE Drone CASCADE CONSTRAINTS;
DROP TABLE ParkingSlotDrones CASCADE CONSTRAINTS;
DROP TABLE ParkingSlotDronesUsage CASCADE CONSTRAINTS;
DROP TABLE state_order CASCADE CONSTRAINTS;
DROP TABLE DeliveryRunLine CASCADE CONSTRAINTS;

CREATE TABLE Courier (ID_courier number(10) GENERATED AS IDENTITY, name_courier varchar2(255) NOT NULL, NISS number(20) NOT NULL, NIF_courier number(9) NOT NULL, weight double precision NOT NULL, ScooterID_scooter number(10) NOT NULL, PharmacyID_pharmacy number(10) NOT NULL, Useruser_email varchar2(255) NOT NULL, PRIMARY KEY (ID_courier));
CREATE TABLE Client (ID_client number(10) GENERATED AS IDENTITY, name_client varchar2(255) NOT NULL, NIF_client number(9) NOT NULL, credits number(10) NOT NULL, CreditCardnumber number(16) NOT NULL, AddresscoordinateX double precision NOT NULL, AddresscoordinateY double precision NOT NULL, Useruser_email varchar2(255) NOT NULL, PRIMARY KEY (ID_client));
CREATE TABLE ParkingSlotScootersUsage (dateIn timestamp(0) NOT NULL, dateOut timestamp(0) NOT NULL, ScooterID_scooter number(10) NOT NULL, ParkingSlotsScootersParkingSlotID_parkingSlot number(10) NOT NULL, PRIMARY KEY (dateIn, ScooterID_scooter, ParkingSlotsScootersParkingSlotID_parkingSlot));
CREATE TABLE ParkingSlotsScooters (has_charging_capabilities char(1) NOT NULL, State_of_use_typeID_state_of_use number(10) NOT NULL, ParkingSlotID_parkingSlot number(10) NOT NULL, PRIMARY KEY (ParkingSlotID_parkingSlot));
CREATE TABLE Scooter (ID_scooter number(10) NOT NULL, max_battery_capacity double precision NOT NULL, state_of_charge double precision NOT NULL, powerOutput double precision NOT NULL, weight double precision NOT NULL, max_payload double precision NOT NULL, PharmacyID_pharmacy number(10) NOT NULL, PRIMARY KEY (ID_scooter));
CREATE TABLE Address (street varchar2(255) NOT NULL, coordinateX double precision NOT NULL, coordinateY double precision NOT NULL, PostalCodeID_postal number(10) NOT NULL, elevation double precision DEFAULT 100 NOT NULL, PRIMARY KEY (coordinateX, coordinateY));
CREATE TABLE CreditCard (number_card number(16) NOT NULL, CVV number(10) NOT NULL, validity_month number(10) NOT NULL, validity_year number(10) NOT NULL, PRIMARY KEY (number_card));
CREATE TABLE ClientOrder (ID_order number(10) GENERATED AS IDENTITY, ClientID_client number(10) NOT NULL, order_date timestamp(0) NOT NULL, state_orderID_state_order number(10) NOT NULL, PharmacyID_pharmacy number(10) NOT NULL, PRIMARY KEY (ID_order));
CREATE TABLE Product (ID_product number(10) GENERATED AS IDENTITY, name varchar2(255) NOT NULL, price number(10) NOT NULL, weigth number(10, 3) NOT NULL, Product_typeID_type_product number(10) NOT NULL, PRIMARY KEY (ID_product));
CREATE TABLE PostalCode (ID_postal number(10) GENERATED AS IDENTITY, city number(10) NOT NULL, local number(10) NOT NULL, PRIMARY KEY (ID_postal));
CREATE TABLE CourierScooter (dateIn timestamp(0) NOT NULL, dateOut timestamp(0) NOT NULL, CourierID_courier number(10) NOT NULL, ScooterID_scooter number(10) NOT NULL, PRIMARY KEY (dateIn, CourierID_courier, ScooterID_scooter));
CREATE TABLE Invoice (ID_invoice number(10) GENERATED AS IDENTITY, OrderID_order number(10) NOT NULL, Date_invoice timestamp(0) NOT NULL, PRIMARY KEY (ID_invoice));
CREATE TABLE OrderLine (OrderID_order number(10) NOT NULL, ProductID_product number(10) NOT NULL, quantity number(10) NOT NULL, PRIMARY KEY (OrderID_order, ProductID_product));
CREATE TABLE State_of_use_type (ID_state_of_use number(10) GENERATED AS IDENTITY, name_state_of_use varchar2(255) NOT NULL, PRIMARY KEY (ID_state_of_use));
CREATE TABLE Product_type (ID_type_product number(10) GENERATED AS IDENTITY, name_type varchar2(255) NOT NULL, PRIMARY KEY (ID_type_product));
CREATE TABLE DeliveryRun (ID_delivery_run number(10) GENERATED AS IDENTITY, CourierID_courier number(10) NOT NULL, delivery_run_date timestamp(0) NOT NULL, PRIMARY KEY (ID_delivery_run));
CREATE TABLE Pharmacy (ID_pharmacy number(10) GENERATED AS IDENTITY, name_pharmacy varchar2(255) NOT NULL, NIF_pharmacy number(10) NOT NULL, AdministratorID_administrator number(10) NOT NULL, AddresscoordinateX double precision NOT NULL, AddresscoordinateY double precision NOT NULL, park_input_voltage number(10) NOT NULL, park_input_current number(10) NOT NULL, max_number_scooter number(10) NOT NULL, PRIMARY KEY (ID_pharmacy));
CREATE TABLE PlatformUser (user_email varchar2(255) NOT NULL, password varchar2(255) NOT NULL, UserTypeID_user_type number(10) NOT NULL, PRIMARY KEY (user_email));
CREATE TABLE Administrator (name_administrator varchar2(255) NOT NULL, Useruser_email varchar2(255) NOT NULL, ID_administrator number(10) GENERATED AS IDENTITY, PRIMARY KEY (ID_administrator));
CREATE TABLE UserType (ID_user_type number(10) GENERATED AS IDENTITY, designation varchar2(255) NOT NULL, PRIMARY KEY (ID_user_type));
CREATE TABLE InvoiceLine (InvoiceID_invoice number(10) NOT NULL, ID_invoice_line number(10) GENERATED AS IDENTITY, OrderLineProductID_product number(10) NOT NULL, OrderLineOrderID_order number(10) NOT NULL, PRIMARY KEY (ID_invoice_line));
CREATE TABLE Stock (PharmacyID_pharmacy number(10) NOT NULL, PRIMARY KEY (PharmacyID_pharmacy));
CREATE TABLE StockLine (StockPharmacyID_pharmacy number(10) NOT NULL, ProductID_product number(10) NOT NULL, quantity number(10) NOT NULL, PRIMARY KEY (StockPharmacyID_pharmacy, ProductID_product));
CREATE TABLE ParkingSlot (ID_parkingSlot number(10) GENERATED AS IDENTITY, PharmacyID_pharmacy number(10) NOT NULL, PRIMARY KEY (ID_parkingSlot));
CREATE TABLE Drone (ID_drone number(10) NOT NULL, max_battery_capacity double precision NOT NULL, max_payload double precision NOT NULL, state_of_charge double precision NOT NULL, powerOutput double precision NOT NULL, weight double precision NOT NULL, PharmacyID_pharmacy number(10) NOT NULL, PRIMARY KEY (ID_drone));
CREATE TABLE ParkingSlotDrones (has_charging_capabilities char(1) NOT NULL, State_of_use_typeID_state_of_use number(10) NOT NULL, ParkingSlotID_parkingSlot number(10) NOT NULL, PRIMARY KEY (ParkingSlotID_parkingSlot));
CREATE TABLE ParkingSlotDronesUsage (dateIn timestamp(0) NOT NULL, dateOut timestamp(0) NOT NULL, DroneID_drone number(10) NOT NULL, ParkingSlotDronesParkingSlotID_parkingSlot number(10) NOT NULL, PRIMARY KEY (dateIn, DroneID_drone, ParkingSlotDronesParkingSlotID_parkingSlot));
CREATE TABLE state_order (ID_state_order number(10) GENERATED AS IDENTITY, state_order_designation varchar2(255) NOT NULL, PRIMARY KEY (ID_state_order));
CREATE TABLE DeliveryRunLine (ClientOrderID_order number(10) NOT NULL, DeliveryRunID_delivery_run number(10) NOT NULL, PRIMARY KEY (ClientOrderID_order, DeliveryRunID_delivery_run));


ALTER TABLE ParkingSlotsScooters ADD CONSTRAINT FKParkingSlo832394 FOREIGN KEY (State_of_use_typeID_state_of_use) REFERENCES State_of_use_type (ID_state_of_use) on delete cascade;
ALTER TABLE ParkingSlotScootersUsage ADD CONSTRAINT FKParkingSlo73542 FOREIGN KEY (ParkingSlotsScootersParkingSlotID_parkingSlot) REFERENCES ParkingSlotsScooters (ParkingSlotID_parkingSlot) on delete cascade;
ALTER TABLE ParkingSlotScootersUsage ADD CONSTRAINT FKParkingSlo780421 FOREIGN KEY (ScooterID_scooter) REFERENCES Scooter (ID_scooter) on delete cascade;
ALTER TABLE Courier ADD CONSTRAINT FKCourier524997 FOREIGN KEY (ScooterID_scooter) REFERENCES Scooter (ID_scooter) on delete cascade;
ALTER TABLE CourierScooter ADD CONSTRAINT FKCourierSco747949 FOREIGN KEY (CourierID_courier) REFERENCES Courier (ID_courier) on delete cascade;
ALTER TABLE CourierScooter ADD CONSTRAINT FKCourierSco831059 FOREIGN KEY (ScooterID_scooter) REFERENCES Scooter (ID_scooter) on delete cascade;
ALTER TABLE ClientOrder ADD CONSTRAINT FKClientOrde308178 FOREIGN KEY (ClientID_client) REFERENCES Client (ID_client) on delete cascade;
ALTER TABLE Invoice ADD CONSTRAINT FKInvoice110445 FOREIGN KEY (OrderID_order) REFERENCES ClientOrder (ID_order) on delete cascade;
ALTER TABLE OrderLine ADD CONSTRAINT FKOrderLine593978 FOREIGN KEY (OrderID_order) REFERENCES ClientOrder (ID_order) on delete cascade;
ALTER TABLE Product ADD CONSTRAINT FKProduct327778 FOREIGN KEY (Product_typeID_type_product) REFERENCES Product_type (ID_type_product) on delete cascade;
ALTER TABLE OrderLine ADD CONSTRAINT FKOrderLine480881 FOREIGN KEY (ProductID_product) REFERENCES Product (ID_product) on delete cascade;
ALTER TABLE Client ADD CONSTRAINT FKClient538645 FOREIGN KEY (CreditCardnumber) REFERENCES CreditCard (number_card) on delete cascade;
ALTER TABLE Address ADD CONSTRAINT FKAddress82697 FOREIGN KEY (PostalCodeID_postal) REFERENCES PostalCode (ID_postal) on delete cascade;
ALTER TABLE Client ADD CONSTRAINT FKClient307427 FOREIGN KEY (AddresscoordinateX, AddresscoordinateY) REFERENCES Address (coordinateX, coordinateY) on delete cascade;
ALTER TABLE DeliveryRun ADD CONSTRAINT FKDeliveryRu543842 FOREIGN KEY (CourierID_courier) REFERENCES Courier (ID_courier) on delete cascade;
ALTER TABLE Scooter ADD CONSTRAINT FKScooter327077 FOREIGN KEY (PharmacyID_pharmacy) REFERENCES Pharmacy (ID_pharmacy) on delete cascade;
ALTER TABLE Courier ADD CONSTRAINT FKCourier338843 FOREIGN KEY (PharmacyID_pharmacy) REFERENCES Pharmacy (ID_pharmacy) on delete cascade;
ALTER TABLE Courier ADD CONSTRAINT FKCourier930879 FOREIGN KEY (Useruser_email) REFERENCES PlatformUser (user_email) on delete cascade;
ALTER TABLE Client ADD CONSTRAINT FKClient540219 FOREIGN KEY (Useruser_email) REFERENCES PlatformUser (user_email) on delete cascade;
ALTER TABLE Administrator ADD CONSTRAINT FKAdministra39163 FOREIGN KEY (Useruser_email) REFERENCES PlatformUser (user_email) on delete cascade;
ALTER TABLE Pharmacy ADD CONSTRAINT FKPharmacy223837 FOREIGN KEY (AdministratorID_administrator) REFERENCES Administrator (ID_administrator) on delete cascade;
ALTER TABLE Pharmacy ADD CONSTRAINT FKPharmacy199514 FOREIGN KEY (AddresscoordinateX, AddresscoordinateY) REFERENCES Address (coordinateX, coordinateY) on delete cascade;
ALTER TABLE PlatformUser ADD CONSTRAINT FKPlatformUs427444 FOREIGN KEY (UserTypeID_user_type) REFERENCES UserType (ID_user_type) on delete cascade;
ALTER TABLE InvoiceLine ADD CONSTRAINT FKInvoiceLin981752 FOREIGN KEY (InvoiceID_invoice) REFERENCES Invoice (ID_invoice) on delete cascade;
ALTER TABLE InvoiceLine ADD CONSTRAINT FKInvoiceLin634443 FOREIGN KEY (OrderLineOrderID_order, OrderLineProductID_product) REFERENCES OrderLine (OrderID_order, ProductID_product) on delete cascade;
ALTER TABLE Stock ADD CONSTRAINT FKStock933212 FOREIGN KEY (PharmacyID_pharmacy) REFERENCES Pharmacy (ID_pharmacy) on delete cascade;
ALTER TABLE StockLine ADD CONSTRAINT FKStockLine318541 FOREIGN KEY (StockPharmacyID_pharmacy) REFERENCES Stock (PharmacyID_pharmacy) on delete cascade;
ALTER TABLE StockLine ADD CONSTRAINT FKStockLine135605 FOREIGN KEY (ProductID_product) REFERENCES Product (ID_product) on delete cascade;
ALTER TABLE ParkingSlotsScooters ADD CONSTRAINT FKParkingSlo970670 FOREIGN KEY (ParkingSlotID_parkingSlot) REFERENCES ParkingSlot (ID_parkingSlot) on delete cascade;
ALTER TABLE ParkingSlot ADD CONSTRAINT FKParkingSlo835287 FOREIGN KEY (PharmacyID_pharmacy) REFERENCES Pharmacy (ID_pharmacy)on delete cascade ;
ALTER TABLE ParkingSlotDrones ADD CONSTRAINT FKParkingSlo238536 FOREIGN KEY (State_of_use_typeID_state_of_use) REFERENCES State_of_use_type (ID_state_of_use) on delete cascade;
ALTER TABLE ParkingSlotDrones ADD CONSTRAINT FKParkingSlo100260 FOREIGN KEY (ParkingSlotID_parkingSlot) REFERENCES ParkingSlot (ID_parkingSlot) on delete cascade;
ALTER TABLE ParkingSlotDronesUsage ADD CONSTRAINT FKParkingSlo476322 FOREIGN KEY (DroneID_drone) REFERENCES Drone (ID_drone) on delete cascade;
ALTER TABLE ParkingSlotDronesUsage ADD CONSTRAINT FKParkingSlo342745 FOREIGN KEY (ParkingSlotDronesParkingSlotID_parkingSlot) REFERENCES ParkingSlotDrones (ParkingSlotID_parkingSlot) on delete cascade;
ALTER TABLE Drone ADD CONSTRAINT FKDrone21137 FOREIGN KEY (PharmacyID_pharmacy) REFERENCES Pharmacy (ID_pharmacy) on delete cascade;
ALTER TABLE ClientOrder ADD CONSTRAINT FKClientOrde945674 FOREIGN KEY (state_orderID_state_order) REFERENCES state_order (ID_state_order) on delete cascade;
ALTER TABLE DeliveryRunLine ADD CONSTRAINT FKDeliveryRu886027 FOREIGN KEY (ClientOrderID_order) REFERENCES ClientOrder (ID_order) on delete cascade;
ALTER TABLE DeliveryRunLine ADD CONSTRAINT FKDeliveryRu523261 FOREIGN KEY (DeliveryRunID_delivery_run) REFERENCES DeliveryRun (ID_delivery_run) on delete cascade;
ALTER TABLE ClientOrder ADD CONSTRAINT FKClientOrde914245 FOREIGN KEY (PharmacyID_pharmacy) REFERENCES Pharmacy (ID_pharmacy) on delete cascade;


ALTER TABLE Client ADD CONSTRAINT   UKClient_nif UNIQUE (NIF_CLIENT);
ALTER TABLE Client ADD CONSTRAINT   NNClient_name NOT NULL (name_client);



ALTER TABLE Client ADD CONSTRAINT FKClient540219 FOREIGN KEY (Useruser_email) REFERENCES PlatformUser (user_email) on delete cascade;

